style.css
@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap');

/* Declaring variables that are used globally */
:root {
  /* Colors */
  --primary-color: #FFFFFF;
  --secondary-color: #FFFFFF;
  --background-color: #333333;
  --accent-color: #F66E0D;
  --text-color: #FFFFFF;
  --text-color-muted: #F5F5F5;

  /* Fonts */
  --font-family: 'Oxygen', sans-serif;
  --font-weight: 300; /* 300, 400, 700 for light, medium, bold */
}

html, body {
	height: 100%;
	margin: 0;
	background-color: var(--background-color);
	color: var(--text-color);
	font-family: var(--font-family);
}

body {
	display: flex;
	flex-direction: column;
	padding: 0;
}

/* Mobile responsiveness */
@media (max-width: 768px) {
    .image-text-pair {
    flex-direction: column;   /* stack image + text vertically */
    gap: 2rem;                /* smaller spacing */
    text-align: center;
    padding: 1rem;
  }
    .side-image-1 {
    width: 80%;               /* scale image for small screens */
    height: auto;
  }
    .text-block {
    width: 100%;
    align-items: center;       /* center text for mobile */
    text-align: center;
  }
    nav a {
        margin: 0 10px;
        font-size: 1rem;
    }
}


/* Side-by-side container */
.image-text-pair {
  display: flex;          /* places image + text side by side */
  align-items: center;    /* vertical alignment (center relative to image) */
  gap: 20vw;              /* space between image and text */
  flex-direction: row-reverse;
  justify-content: center;
}

/* Image Settings */
.side-image-1 {
  width: 30vw;           /* adjust image size */
  height: 40vw;
  border-radius: 8px;     /* optional rounded corners */
  object-fit: cover;
  object-position: center;
}

/* Text Container */
.text-block {
  display: flex;
  flex-direction: column; /* stack headings and text vertically */
  justify-content: center; /* centers them relative to image */
  align-items: center; /* aligns text to the left */
  text-align: center;
  width: 30vw;
}

/* Centered block container */
.text-block-center {
  display: block;
  text-align: center;
  justify-content: center;
  align-content: center;
}

/* Typography */
p, h1, h2, h3, h4, h5, h6 {
    font-family: var(--font-family);
    font-weight: var(--font-weight);
    color: var(--text-color);
    margin: 1.5em 0 0.8em;
    line-height: 1.6;
}
h1 { /* website title header */
    font-size: 2.5rem;
    font-weight: 700;
    display: flex;
    margin: 0 auto;
    justify-content: center;
    align-items: center;
}
h2 { /* Main Colored header */
    font-size: 3rem;
    color: var(--accent-color);
}
h3 {
    font-size: 1.5rem;

}
h4 {
    font-size: 1.2rem;
    margin-bottom: 1rem;
    line-height: 2.0;
}
h5 {
    font-size: 1rem;

}
h6 {
    font-size: 0.8rem;

}
p {
  font-size: 1rem;                 /* font size */
  margin-bottom: 1rem;             /* space after each paragraph */
  text-align: left;                /* left-aligned text */
}

/*header stuff*/
a {
	color: var(--text-color);
	text-decoration: none;
}
a:hover {
	text-decoration: none;

}
header {
    background-color: var(--background-color);
    width: 100%;
    position: sticky;
    z-index: 1000;
}
nav {
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 100%;
    margin: 0 auto;
    padding: 0;
    height: 0px;
}
nav a {
    text-decoration: none;
    color: var(--text-color);
    margin: 0 20px;
    padding: 0.5rem 0;
    font-size: 1.1rem;
    letter-spacing: 1px;
    position: relative;
    transition: color 0.3s ease;
}
nav a:hover {
    color: #F66E0D;

}
nav a.active {
    color: #F66E0D;

}
nav a.active:after {
    content: '';
    padding-bottom: 8px;
    border-bottom: 2px solid var(--accent-color);
    position: absolute;
    width: 100%;
    height: 2px;
    bottom: 0;
    left: 0;
    background-color: #F66E0D;
}

/* Footer */
footer {
	background: linear-gradient(to bottom, rgba(51, 51, 51, 0) 0%, #333333 100%);
    border-top: 1px solid #444444;
    display: block;
    align-content: center;  /* centers horizontally */
    justify-content: center; /* centers vertically */
}

/* Header */
header {
    background-color: var(--background-color);
    height: 200px;
    display: block;
    align-content: center;  /* centers horizontally */
    justify-content: center; /* centers vertically */
}

/* Button Container */
.buttons {
  display: flex;
  gap: 1rem;
  justify-content: center;
  margin: 2rem 0;
}
.btn {
  display: flex;
  align-items: center;
  gap: 1rem;             /* space between icon + text */
  padding: 0.75rem 1.5rem;
  font-size: 1.2rem;
  font-weight: 700;
  text-decoration: none;
  border-radius: 8px;
  transition: background 0.3s ease;
  border: 2px solid var(--primary-color);
}
.btn:hover {
    border-color: var(--accent-color);
    color: var(--accent-color);
}

/* Experience Section */
body.experience {
  background: url("assets/image-assets/hr-pipedesign.png") repeat;
  object-fit: cover;
  background-size: cover;
  background-position: center;
}
.hero-banner {
  background: url("assets/experience-assets/blue-origin/BlueLogo.png") center no-repeat, #333333;
  border-radius: 8px;
  border: none;
  display: inline;
  align-items: center;
  justify-content: center;
}
.gradient-bar {
  width: 100%;
  height: 400px;
  background: linear-gradient(
    to bottom,
    rgba(51, 51, 51, 0) 0%,
    #333333 50%,
    rgba(51, 51, 51, 0) 100%
  );
}

